dist_pkgdata_DATA = gen_digest_lists.txt \
		    setup_ima_digest_lists.txt \
		    setup_ima_digest_lists_demo.txt \
		    upload_digest_lists.txt \
		    verify_digest_lists.txt

man1_MANS = gen_digest_lists.1 \
	    setup_ima_digest_lists.1 \
	    setup_ima_digest_lists_demo.1 \
	    upload_digest_lists.1 \
	    verify_digest_lists.1
