digest_lists_includedir=$(includedir)/digestlist
digest_lists_include_HEADERS = kernel_lib.h \
			       list.h \
			       lib.h \
			       compact_list.h \
			       crypto.h \
			       xattr.h \
			       evm.h \
			       selinux.h \
			       cap.h \
			       ima_list.h \
			       parser_lib.h
